# MacWolfSDL

./: .gitignore  Burger.c  Burger.h  CMakeLists.txt  Data.c  Doors.c  EnMove.c  EnThink.c  InterMis.c  Intro.c  LICENSES  Level.c  MacFont.c  MacLoader.c  MacMenu.c  Missiles.c  Music.c  PlMove.c  PlStuff.c  PlThink.c  PushWall.c  README.md  RefBsp.c  RefSprite.c  Refresh.c  Refresh2.c  SDLWolf.c  SDLWolf.h  SetupScalers.c  Sight.c  SnesMain.c  Sounds.h  Sprites.h  StateDef.c  States.h  Wolf.h  WolfDef.h  WolfIO.c  WolfMain.c  libres_internal.h  (+4 more)
.github/workflows/: build.yml
pkg/: Info.plist  MacWolfSDL.icns  MacWolfSDL.rc
src/: Burger.c  EnThink.c  InterMis.c  Level.c  MacFont.c  MacLoader.c  MacMenu.c  Music.c  PlMove.c  PlStuff.c  PlThink.c  PushWall.c  RefBsp.c  Refresh2.c  SDLWolf.c  SDLWolf.h  SetupScalers.c  Sight.c  Sounds.h  Wolf.h  WolfDef.h  WolfMain.c  ini.h  tml.h
